# PocketRelayClientPlugin

./: .gitignore  Cargo.toml  README.md  cspell.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build-tagged-release.yml  build.yml
src/: config.rs  constants.rs  hooks.rs  lib.rs  pattern.rs  servers.rs  threads.rs  ui.rs  ui2.rs  update.rs
src/api/: mod.rs
src/game/: core.rs  mod.rs  sfxgame.rs  sfxonlinefoundation.rs
src/hooks/: host_lookup.rs  mem.rs  mod.rs  process_event.rs
src/interface/: mod.rs
src/overlay/: mod.rs
src/servers/: http.rs  main.rs  mod.rs  qos.rs  redirector.rs  telemetry.rs
