[package]
name = "pocket-relay-plugin"
version = "0.0.6-beta"
edition = "2021"
description = "ASI plugin for ME3 to allow playing on Pocket Relay servers"
repository = "https://github.com/PocketRelay/PocketRelayClientPlugin"
license = "MIT"
readme = "README.md"
authors = ["Jacobtread <jacobtread@gmail.com>"]
keywords = ["Hooking"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Shared backing library
pocket-relay-client-shared = { version = "^0.2" }

# Logging
env_logger = "0.10"
log = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Native GUI building
native-windows-gui = { version = "1", features = ["notice"] }
native-windows-derive = { version = "1" }

futures = "0.3"

[dependencies.windows-sys]
version = "0.52"
features = [
    # Foundational types
    "Win32_Foundation",
    # For DLL_PROCESS_ATTACH and DLL_PROCESS_DETACH constants
    "Win32_System_SystemServices",
    # Requried for virtual protecting memory
    "Win32_System_Memory",
    # Required for allocating consoles
    "Win32_System_Console",
    # Required for HOSTENT structure and gethostbyname function
    "Win32_Networking_WinSock",
    # APIs to suspend threads
    "Win32_System_Diagnostics_ToolHelp",
]

# Tokio async runtime
[dependencies.tokio]
version = "1"
features = ["full"]

[profile.release]
# opt-level = 0
strip = true
lto = true
codegen-units = 1
